html/pfappserver/root/static/app/application.css
/* bootstrap.css fix to show dropdown menus in modals */
.dropdown-menu {
    z-index: 2050;
}
a.active {
    color: #333;
}
.modal h3 i,
.modal dt i {
    font-weight: normal;
    font-style: normal;
}
/* bootstrap fix for modals */
.modal form, .modal select {
    margin-bottom: 0px;
}
/* bootstrap.css extension to forms */
.form-condensed .control-group {
    margin-bottom: 2px;
}
/* steal dropdown header from bootstrap 3.0 */
.dropdown-header {
    display: block;
    padding: 3px 20px;
    font-size: 12px;
    line-height: 1.428571429;
    color: #999999;
}
/* mixing noneditable fields in forms, inspired from .uneditable-input */
form .uneditable {
    display: inline-block;
    height: 18px;
    line-height: 18px;
    padding-top: 5px;
    margin-bottom: 5px;
}
/* datepicker + timepicker fix to limit the bottom margin */
.modal .datepicker,
.modal .timepicker-default {
    margin-top: 1px;
    margin-bottom: 0px;
}
.bootstrap-timepicker a {
    color: #000;
    text-decoration: none;
}
.dl-expanded dt, .dl-expanded dd {
    line-height: 27px;
}
/* specific to interfaces */
#interfaces td span.label {
    margin-left: 5px;
}
/* large modal */
.modal-large {
    margin-left: -390px;
    width: 780px;
}
.inline {
    display: inline;
}
.blurry {
    color: transparent;
    text-shadow: 0 0 5px rgba(0,0,0,0.5);
}
.collapsed > .icon-chevron-up {
    transform: rotate(180deg);
    transition: transform 240ms;
}
.nav li a:hover, .nav li a:focus {
    text-decoration: none;
}

.input-prepend .chzn-choices .search-choice,
.input-append .chzn-choices .search-choice {
    font-size : 14px;
}

